# MODULAR-RAG-MCP-SERVER

./: .gitignore  DEV_SPEC.md  README.md  TODO.md  interview_report_20260323_135831.md  interview_report_20260323_143357.md  main.py  pyproject.toml  requirements.txt
.cursor/: hooks.json
config/: settings.local.yaml.example  settings.yaml
config/prompts/: boundary_repair.txt  chunk_refinement.txt  image_captioning.txt  rerank.txt
modular_rag_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_golden_test_set.py  build_golden_test_set_llm.py  embedding_dim.py  enrich_golden_content_checks.py  enrich_golden_content_checks_llm.py  evaluate.py  ingest.py  ingest_mineru.py  inspect_markitdown.py  retrieve.py  start_dashboard.py  test_mineru_connection.py  test_pdf_image_extraction.py  verify_vector_chunk_ids.py
src/: __init__.py
src/core/: settings.py
src/ingestion/: __init__.py  models.py  parsed_document.py  pipeline.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: logger.py
tests/e2e/: test_data_ingestion.py  test_mcp_client.py
tests/fixtures/: golden_test_set.json
tests/integration/: conftest.py  test_chroma_store_roundtrip.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py  test_retrieval_pipeline.py
tests/unit/: test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_boundary_repairer.py  test_chunk_refiner.py  test_citation_generator.py  test_config_loading.py  test_content_evaluator.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dense_encoder.py  test_dense_retriever.py  test_embedding_factory.py  test_embedding_providers_smoke.py  test_eval_runner.py  test_file_integrity.py  test_fts5_bm25_indexer.py  test_fusion_rrf.py  test_get_chunks_by_parent_id.py  test_get_document_summary.py  test_heading_splitter.py  (+37 more)
(+114 files in other folders)
